--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -12,7 +12,15 @@
   <main>
     <div class="jumbotron">
       <h1>This is great</h1>
-      <p>Welcome to the jungle!</p>
+      <p>Welcome to my mind.</p>
+      <h2>Variables</h2>
+      <p><%= tagline %></p>
+      <h2>Loops</h2>
+      <ul>
+        <% drinks.forEach(function(drink) { %>
+          <li><%= drink.name %> - <%= drink.drunkness %></li>
+        <% }); %>
+      </ul>
     </div>
   </main>
 
